@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction

class GenerateTeamUI
{

}

class GenerateTeamController
{
    + GenerateTeamController()
    + getSkills()
    + addSelectedSkillName(skillName)
    + generateTeamProposal(minCollab, maxCollab)
    + registerTeam(teamProposal)
    - getSelectedSkillsList()
    - createAvailableCollaboratorsList()
    - selectCollaboratorsForTeam(selectedSkillsList, minCollab, maxCollab)
}
'###############################################
'Confirmar o pq do construtor ter os repositórios no exemplo
'###############################################

class Repositories
{
    - Repositories()
    + getInstance() : Repositories
    + getSkillRepository()
    + getCollaboratorRepository()
    + getTeamRepository()
}



class SkillRepository
{
    + getSkills()
    + createSelectedSkillsList()
    + addSelectedSkill(skillName)
    + getSkillByName(selectedSkillName)
    + getSelectedSkillsList()
}

class CollaboratorRepository
{
    + createTempCollaboratorList()
    + generateTeam(selectedSkillsList, minCollab, maxCollab)
}

class TeamRepository
{
    + removeUnavailableCollaborators(tempCollaboratorList)
    + registerTeam(teamProposal)
    - addTeam(team)
}

class Collaborator
{
    - String name
    - Calendar birthdate
    - Calendar admissionDate
    - String address
    - Integer phoneNumber
    - String email
    - Integer taxpayerNumber
    - String identificationDocumentNumber
    + Collaborator(name, birthdate,\nadmissionDate, address, phoneNumber,\nemail, taxpayerNumber, identificationDocumentType,\nidentificationDocumentNumber, job)
    + getSkills()
}

enum DocType
{
    CC
    BI
    Passport
}

class Skill
{
    - String name
}

class Team
{
    + Team(teamProposal)
    + removeUnavailableCollaborators(tempCollaboratorList)
}

Repositories -> Repositories : instance

GenerateTeamUI ..> GenerateTeamController

GenerateTeamController ...> Repositories : repositories

GenerateTeamController ...> CollaboratorRepository : collaboratorRepository
GenerateTeamController ...> SkillRepository : skillRepository
GenerateTeamController ...> TeamRepository : teamRepository

Repositories --> "1" SkillRepository
Repositories --> "1" CollaboratorRepository
Repositories --> "1" TeamRepository

SkillRepository "1" --> "*" Skill: skill
CollaboratorRepository "1" --> "*" Collaborator : collaborator
TeamRepository "1" --> "*" Team: team

Collaborator "1" --> "*" Skill: has
Team "1" --> "1..*" Collaborator: has

Collaborator +-- DocType

@enduml